examples/applications/multi-peers/frontend/frontend.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        consul.hashicorp.com/connect-inject: 'true'
        # consul.hashicorp.com/connect-service-upstreams: 'backend:9091'
        # consul.hashicorp.com/connect-service-upstreams: 'backend.svc.default.ns.dc2-finance.peer:9091'
        consul.hashicorp.com/enable-metrics-merging: "false"
    spec:
      serviceAccountName: frontend
      containers:
        - name: frontend
          image: panchalravi/fake-service:0.24.2
          ports:
            - containerPort: 9090
